# llm-serving-lab

./: .editorconfig  .gitignore  README.md  metrics-cli.py  pyproject.toml
config/: terraformrc
gpu/: Makefile  README.md
gpu/ansible/: .ansible-lint  ansible.cfg  inventory.ini.example  requirements.yml
gpu/ansible/group_vars/all/: main.yml
gpu/ansible/playbooks/: site.yml
gpu/ansible/roles/gpu_setup/handlers/: main.yml
gpu/ansible/roles/gpu_setup/tasks/: main.yml
gpu/ansible/roles/gpu_setup/templates/: env.j2  metrics-exporter.service.j2  metrics_exporter.py.j2  vllm.service.j2  vllm_start.sh.j2
gpu/ansible/vault/: vault.yml.example
gpu/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
notes/: week1.md
obs/: Makefile  README.md
obs/ansible/: .ansible-lint  .gitignore  ansible.cfg  inventory.ini  inventory.ini.example  requirements.yml
obs/ansible/files/: docker-compose.obs.yml
obs/ansible/files/clickhouse-init/: 001-users-and-db.sql
obs/ansible/files/dashboards/: gpu_node_health.json
obs/ansible/group_vars/: obs.yml
obs/ansible/group_vars/obs/: main.yml
obs/ansible/playbooks/: site.yml
obs/ansible/roles/docker/handlers/: main.yml
obs/ansible/roles/docker/tasks/: main.yml
obs/ansible/roles/jupyter_setup/handlers/: main.yml
obs/ansible/roles/jupyter_setup/tasks/: main.yml
obs/ansible/roles/jupyter_setup/templates/: jupyter.service.j2
obs/ansible/roles/obs_stack/files/: otel-collector-gateway.yaml
obs/ansible/roles/obs_stack/files/dashboards/: experiment_overview.json
obs/ansible/roles/obs_stack/handlers/: main.yml
obs/ansible/roles/obs_stack/tasks/: main.yml  validate.yml
obs/config/: README.md  docker-compose.yml  jupyter_notebook_config.py.j2
obs/config/grafana/: install-plugins.sh  provisioning-datasource.yaml
obs/config/otel/: collector-gateway.yaml
obs/dashboards/: README.md  experiment_overview.json  gpu_node_health.json  vllm_api_monitoring.json
obs/sql/: 001-users-and-db.sql.j2  README.md
obs/terraform/: .gitignore  .terraform.lock.hcl  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
src/: README.md  __init__.py
src/deployment/: __init__.py
src/loadgen/: README.md  __init__.py  config.py  load_generator_v1.py
src/monitoring/: __init__.py  gpu_metrics.py  metrics_exporter.py  system_metrics.py  vllm_metrics.py
src/utils/: __init__.py
