[project]
name = "llm-serving-lab"
version = "0.1.0"
description = "A long-term lab for LLM serving experiments with comprehensive monitoring"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
authors = [{ name = "akrisanov" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]

dependencies = ["ansible>=7.0.0"]

[project.optional-dependencies]
dev = ["ansible-lint>=6.0.0", "yamllint>=1.28.0"]

lint = ["ansible-lint>=6.0.0", "yamllint>=1.28.0"]

[project.urls]
Homepage = "https://github.com/akrisanov/llm-serving-lab"
Repository = "https://github.com/akrisanov/llm-serving-lab"

# No build system needed - this is a dependency management only project

[tool.uv]
dev-dependencies = ["ansible-lint>=6.0.0", "yamllint>=1.28.0"]


[tool.yamllint]
extends = "default"

[tool.yamllint.rules.line-length]
max = 120

[tool.yamllint.rules.comments-indentation]
disable = true

[tool.ansible-lint]
exclude_paths = [".cache/", ".github/", ".ansible/"]
use_default_rules = true
verbosity = 1
